--- a/src/main/resources/templates/admin/admin-dashboard.html
+++ b/src/main/resources/templates/admin/admin-dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="layout :: pageContent">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="index :: pageContent">
 <body>
 <section>
     <h2>Admin Dashboard</h2>
